# loes

./: .gitignore  LICENSE  README.md  example_loes.py  pyproject.toml
experiments/: README.md  img_text.py  main_audio.bash  main_audio.py  main_image.py  main_image_seg.py  main_img.bash  main_text.py  main_text_ab.py  main_text_comp.py  plots.ipynb  run_multi_model_analysis.bash  run_seg_analysis.bash
experiments/Results_Final/MTEB/: icml_results_multimetric-frozen.csv  icml_results_multimetric-frozenp2.csv  icml_results_text (1).csv  icml_results_text (2).csv  icml_results_text (3).csv  icml_results_text.csv  icml_results_text_fullsweep (1).csv  icml_results_text_fullsweep (2).csv  icml_results_text_fullsweep.csv
experiments/Results_Final/multi_model_analysis_multiseed_Final/: last_layer_baseline_multiseed.csv  model_accuracies_multiseed.csv  model_rankings_multiseed.csv  paper_ready_table.csv  plots.ipynb  summary_baseline_mean_std.csv  summary_loes_mean_std.csv  summary_rankings_mean_std.csv
experiments/Results_Final/multi_model_analysis_multiseed_Final/per_layer_scores/caltech-ucsd-birds-200-2011/: CLIP-B32_layer_scores_seed123.csv  CLIP-B32_layer_scores_seed2024.csv  CLIP-B32_layer_scores_seed42.csv  (+27 more)
experiments/Results_Final/multi_model_analysis_multiseed_Final/statistical_tests/: anova_across_models.csv  paired_ttest_loes_vs_baseline.csv
experiments/conf/: audio_config.yaml  config copy.yaml  config.yaml  config_seg.yaml  config_text.yaml  config_text_sweep.yaml  img_text_config.yaml
loes/: __init__.py  api.py
tests/: test_loes.py
(+192 files in other folders)
