[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loes"
version = "0.1.0"
description = "Layerwise Optimal Embedding Selector for text, audio, and image models."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1",
    "tqdm>=4.66",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
huggingface = [
    "datasets>=2.19",
    "transformers>=4.40",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
packages = ["loes"]
